<resources>
    <string name="app_name">BookMySeatApp</string>
    <string name="nic">NIC</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="createNew">Don’t have an account ? Create one</string>
    <string name="createOne">Create one</string>
    <string name="createAccount">Create Account</string>
    <string name="email">Email</string>
    <string name="mobileNo">Mobile No</string>
    <string name="create">Create</string>
    <string name="bookMySeat">BookMySeat</string>
    <string name="yourJourney">YOUR JOURNEY BEGINS HERE</string>
    <string name="welcomeUser">Welcome User</string>
    <string name="yourProfile">Your Profile</string>
    <string name="user">User</string>
    <string name="updateProfile">Update</string>
    <string name="planningJourney">Planning Journey ?</string>
    <string name="logOut">Logout</string>
    <string name="createReservation">Create Reservation</string>
</resources>