<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfileActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="345dp"
        android:layout_marginBottom="179dp"
        android:text="@string/logOut" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="348dp"
        android:layout_marginBottom="210dp"
        android:text="Status" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="326dp"
        android:layout_marginBottom="245dp"
        android:text="Mobile No" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="355dp"
        android:layout_marginBottom="276dp"
        android:text="Email" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="69dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="169dp"
        android:layout_marginEnd="172dp"
        android:layout_marginBottom="402dp"
        android:text="@string/user"
        android:textAlignment="center"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/profileImageView2"
        android:layout_width="86dp"
        android:layout_height="76dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginStart="164dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="431dp"
        android:background="@drawable/circular_background"
        android:padding="5dp"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

    </LinearLayout>

    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="65dp"
        android:layout_height="59dp"
        android:layout_above="@+id/profileImageView2"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="103dp"
        android:background="@drawable/circular_background"
        android:padding="5dp"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="224dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="626dp"
        android:layout_toStartOf="@+id/profileImageView"
        android:text="@string/welcomeUser" />

    <TextView
        android:id="@+id/textCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/profileImageView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="247dp"
        android:layout_marginBottom="40dp"
        android:text="@string/yourProfile"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="367dp"
        android:layout_marginBottom="309dp"
        android:text="NIC" />

    <Button
        android:id="@+id/btnUpdateAccount"
        android:layout_width="367dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="37dp"
        android:hint="@string/updateProfile"
        android:textColorLink="#FFFFFF"
        android:textSize="22dp" />

</RelativeLayout>